# UUIDv7

./: LICENSE  README.md  pyproject.toml  setup.cfg  test-2.py
.github/workflows/: workflow.yml
tests/: test_generator.py
uuid7/: generator.py
