# In uuid7_project/setup.cfg

[metadata]
# name, version, author, etc. can be here or in pyproject.toml
# If in pyproject.toml, setuptools will pick them up.
# For simplicity, we've put most in pyproject.toml under the [project] table.
# You can also specify long_description_content_type here if needed:
# long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.7


[options.packages.find]
where = .  
include = uuid7* # Include your package
exclude = tests* # Exclude tests from the final package

# If you want to expose any command-line scripts:
# [options.entry_points]
# console_scripts =
#   my-uuid7-tool = pyuuid7gen.cli:main # Example